# s1500d

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  Makefile  PKGBUILD  README.md  s1500d.install
.claude/: settings.json
.claude/commands/: commit.md  pr.md
.github/: dependabot.yml
.github/workflows/: ci.yml
contrib/: 99-scansnap.rules  config.toml  handler-example.sh  handler-scan-to-pdf.sh  s1500d.service
docs/: _config.yml  explore.py  index.md  protocol.md
src/: config.rs  doctor.rs  main.rs
