[dependencies]
env_logger = "0.11"
log = "0.4"
rusb = "0.9"
serde = {version = "1", features = ["derive"]}
toml = "1.0"

[package]
description = "Bespoke event daemon for the Fujitsu ScanSnap S1500"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "s1500d"
repository = "https://github.com/mmacpherson/s1500d"
rust-version = "1.71"
version = "0.3.0"

[profile.release]
lto = true
strip = true
